changed the tailwind loading to vite.js plugin

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@theme {
+  --color-foreground: #121063;
+  --padding-sm: 16px;
+}
